2008-11-22  Frank Ch. Eigler  <fche@elastic.org>

	PR 5689.
	* tapsets.cxx (dwarf_derived_probe_group::emit_module_exit,decls):
	Print kprobe missed stats if STP_TIMING.
	(uprobe_derived_probe_group::emit_module_exit,declx): Track
	uprobe missed stats if STP_TIMING>
	* translate.cxx (emit_module_exit): Print uprobe missed stats.

2008-11-21  Frank Ch. Eigler  <fche@elastic.org>

	PR 5689.
	* tapsets.cxx (common_probe_entryfn_{pro,epi}logue):
	Track separate skip counts for low-stack and reentrancy conditions.
	* translate.cxx (emit_common_header): Declare counters.
	(emit_module_exit): Print them.
	(emit_unlocks): Don't bother redundantly testing skipped_count.

2008-11-21  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (emit_module_exit): Perform shutdown probe
	synchronization after all unregistrations and end/error probe
	runs.
	
2008-11-20  Frank Ch. Eigler  <fche@elastic.org>

	PR 5689
	* translate.cxx (emit_global, emit_global_init, emit_module_exit,
	emit_locks): Track & print global.s_VAR_lock_skip_count.

2008-11-20  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (main): Correct thinko in --vp option with <5 arg chars.

2008-11-18  Jim Keniston  <jkenisto@us.ibm.com>

	PR 6879
	* runtime/uprobes2/uprobes_x86.c: Allow probing of instructions
	with fs: and gs: prefixes.  Apply fix from runtime/uprobes.

2008-11-18  Frank Ch. Eigler  <fche@elastic.org>

	PR6925.
	* main.cxx (usage,main): Process new --vp option.
	* session.h (perpass_verbose): New field.

2008-11-11  Stan Cox  <scox@redhat.com>

	* Makefile.am (pkglib_LIBRARIES): New.
	* Makefile.in: Regenerated
	* stapprobes.5.in (process.mark): New.
	* tapsets.cxx (register_patterns):  Add process.mark.
	(dwarf_builder::build): Likewise.

2008-11-14  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (common_probe_entryfn_{pro,epi}logue):
	Set "interruptible" to default true, thus disabling local_irq_*
	calls for all current probe point types.

2008-11-13  Wenji Huang  <wenji.huang@oracle.com>
