@@ -956,12 +956,20 @@ Maximum number of soft errors before an exit is triggered, default 0, which
 means that the first error will exit the script.
 .TP
 MAXSKIPPED
-Maximum number of skipped reentrant probes before an exit is triggered, default 100.
+Maximum number of skipped probes before an exit is triggered, default 100.
+Running systemtap with \-t (timing) mode gives more details about skipped
+probes.
 .TP
 MINSTACKSPACE
 Minimum number of free kernel stack bytes required in order to
 run a probe handler, default 1024.  This number should be large enough
 for the probe handler's own needs, plus a safety margin.
+.TP
+MAXUPROBES
+Maximum number of concurrently armed user-space probes (uprobes), default
+100 times the number of user-space probe points named in the script.  This
+pool is large because individual uprobe objects are allocated for each
+process for each script-level probe.
 
 .PP
 Multipule scripts can write data into a relay buffer concurrently. A host
