@@ -1,5 +1,11 @@
 2008-11-22  Frank Ch. Eigler  <fche@elastic.org>
 
+	* tapsets.cxx (MAXUPROBES): Tweak its definition.  Use it
+	consistently.
+	* stap.1.in (MAXUPROBES): Document it.
+
+2008-11-22  Frank Ch. Eigler  <fche@elastic.org>
+
 	PR 5689.
 	* tapsets.cxx (dwarf_derived_probe_group::emit_module_exit,decls):
 	Print kprobe missed stats if STP_TIMING.
